--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
     <!-- Your code here! -->
+    <link rel="stylesheet" href="./style.css">
   </head>
+  <body style=background:#00b3e6;>
 
+    <div style=width:700px;margin:auto;font-family:HelveticaNeue;background:white;padding:30px;>
   <body>
 
     <div>
-      <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
+      <h1 id='main-header'style=font-size:22px;>How Does Writing CSS Differ From Writing HTML?</h1>
       <p>As we write CSS these are the type of questions we might ask ourselves:</p>
 
       <ul>
-        <li class='perspective-questions'>Should the layout of the text be in a single or double column?</li>
-        <li class='perspective-questions'>Should we use a different font color for the header?</li>
-        <li class='perspective-questions'>How should the same content appear
+        <li class='perspective-questions'style=font-style:italic;>Should the layout of the text be in a single or double column?</li>
+        <li class='perspective-questions'style=font-style:italic>Should we use a different font color for the header?</li>
+        <li class='perspective-questions'style=font0style:italic;>How should the same content appear
           differently on a desktop versus a mobile device?</li>
       </ul>
 
